--- a/src/Components/CentreButton.css
+++ b/src/Components/CentreButton.css
@@ -3,16 +3,16 @@ body, html {
     height: 100%;
 }
 .button-background {
-    height: 70vh;
-    width: 100%;
+    height: 55vh;
+    width: 100%;  
     background: red;
-    position: absolute;
+    position: relative;
     bottom: 0;
     background: linear-gradient(#e8e8e8 5%, #dcdcdc 20%, #f5f5f5 100%);
 }
 .button {
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform-origin: bottom center;
     perspective: 100px;
